# PovGlobe

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  log.txt
cpp_src/: CMakeLists.txt
cpp_src/PovGlobe/: CMakeLists.txt  main.cpp  main_test_rpm.cpp
cpp_src/PovGlobe/apps/: application_examples.cpp  application_examples.hpp
cpp_src/PovGlobe/core/: CMakeLists.txt  application_base.cpp  application_base.hpp  framebuffer.cpp  framebuffer.hpp  globe.cpp  globe.hpp  helper.cpp  interpolation.hpp  projection.hpp  renderer_base.cpp  renderer_base.hpp  rpm_measure_base.cpp  rpm_measure_base.hpp
cpp_src/PovGlobe/hw/: CMakeLists.txt  renderer_led_strip.cpp  renderer_led_strip.hpp  renderer_led_strip_pico.cpp  renderer_led_strip_pico.hpp  rpm_measure_hall.cpp
cpp_src/PovGlobe/sim/: CMakeLists.txt  renderer_sim.cpp  renderer_sim.hpp  rpm_measure_sim.cpp
cpp_src/PyPovGlobe/: CMakeLists.txt  swig_wrapper.i
doc/: setup.md
ext/CImg-2.9.5_pre122220/: README.txt
pico_src/Renderer/: CMakeLists.txt  LEDController.cpp  LEDController.hpp  RTTMeasure.cpp  RTTMeasure.hpp  SpiDataReader.cpp  SpiDataReader.hpp  UartDataReader.cpp  UartDataReader.hpp  apa102.pio  constants.hpp  flash.py  main.cpp
py_src/: ClockApp.py  app.py  globe_wrapper.py  main.py  text_printer_app.py  tile_server_api.py
py_src/templates/: app_select.html  appselect.html  configure_app.html
src/: application_base.cpp  application_base.hpp  application_examples.cpp  application_examples.hpp  globe.cpp  globe.hpp  helper.cpp  helper.hpp  main.cpp  main.py  main_test_ledstrip.cpp  main_test_rpm.cpp  renderer_base.cpp  renderer_base.hpp  renderer_led_strip.cpp  renderer_led_strip.hpp  renderer_sim.cpp  renderer_sim.hpp  rpm_measure_base.cpp  rpm_measure_base.hpp  rpm_measure_hall.cpp  rpm_measure_hall.hpp  rpm_measure_sim.cpp  rpm_measure_sim.hpp  tiles_test.py
src/apps/: CMakeLists.txt  application_examples.cpp  application_examples.hpp
src/core/: CMakeLists.txt  application_base.cpp  application_base.hpp  framebuffer.cpp  framebuffer.hpp  globe.cpp  globe.hpp  helper.cpp  helper.hpp  interpolation.hpp  projection.hpp  renderer_base.cpp  renderer_base.hpp  rpm_measure_base.cpp  rpm_measure_base.hpp
src/hw/: CMakeLists.txt  renderer_led_strip.cpp  renderer_led_strip.hpp  rpm_measure_hall.cpp  rpm_measure_hall.hpp
src/sim/: CMakeLists.txt  renderer_sim.cpp  renderer_sim.hpp  rpm_measure_sim.cpp  rpm_measure_sim.hpp
src/wrapper_python/: CMakeLists.txt  swig_wrapper.i
